add translations for toast alarm labels and fix issue - post modal action button is now disabled, when the action is processed

--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -85,5 +85,23 @@
       "faculty": "Faculty",
       "posts": "Posts"
     }
+  },
+  "toast": {
+    "emptyFieldsError": "Please fill in all fields",
+    "createPost": {
+      "loading": "Adding new post...",
+      "success": "Post added successfully!",
+      "error": "Failed to add post."
+    },
+    "editPost": {
+      "loading": "Updating post...",
+      "success": "Post updated successfully!",
+      "error": "Failed to update post"
+    },
+    "deletePost": {
+      "loading": "Deleting post...",
+      "success": "Post deleted successfully!",
+      "error": "Failed to delete post."
+    }
   }
 }
