--- a/src/assets/languages/ge.json
+++ b/src/assets/languages/ge.json
@@ -85,5 +85,23 @@
       "faculty": "ფაკულტეტები",
       "posts": "პოსტები"
     }
+  },
+  "toast": {
+    "emptyFieldsError": "გთხოვთ, შეავსეთ ყველა ველი.",
+    "createPost": {
+      "loading": "ემატება პოსტი...",
+      "success": "პოსტი წარმატებით დაემატა!",
+      "error": "პოსტის დამატებისას დაფიქსირდა შეცდომა"
+    },
+    "editPost": {
+      "loading": "პოსტი განახლების პროცესშია...",
+      "success": "პოსტი წარმატებით განახლდა!",
+      "error": "პოსტის განახლებისას დაფიქსირდა შეცდომა"
+    },
+    "deletePost": {
+      "loading": "პოსტი იშლება...",
+      "success": "პოსტი წარმატებით წაიშალა!",
+      "error": "პოსტის წაშლისას დაფიქსირდა შეცდომა"
+    }
   }
 }
