Adapting styles for dark mode

--- a/src/assets/languages/ge.json
+++ b/src/assets/languages/ge.json
@@ -57,7 +57,7 @@
     }
   },
   "modal": {
-    "btnCreate": "პოსტის დამატება",
+    "btnCreate": "დამატება",
     "btnUpdate": "განახლება",
     "btnDelete": "წაშლა",
     "btnCancel": "გაუქმება",
